# haskell-progamming

./: README.md  chapter_1.md
chapter10/: README.md  database.hs  scans.hs
chapter11/: README.md  binary_tree.hs  cipher.hs  expr.hs  guessWhat.hs  jammin.hs  programmers.hs  too_many_goats.hs  transport.hs
chapter12/: README.md  binaryTree.hs  either.hs  iterate.hs  maybe.hs  natural.hs  stringProcessing.hs  validateTheWord.hs  whyBother.hs
chapter13/: README.md  forever.hs  people.hs
chapter14/: README.md  addition.hs
chapter14/using_quick_check/: using-quick-check.cabal
chapter14/using_quick_check/src/: UsingQuickCheck.hs
chapter14/using_quick_check/tests/: using_quick_check_test.hs
chapter14/word_number/: LICENSE  word-number.cabal
chapter14/word_number/src/: WordNumber.hs
chapter14/word_number/tests/: word_number_test.hs
chapter15/: README.md
chapter17/: README.md
chapter2/: exercises.hs  functionWithLet.hs  learn.hs  notes.md  waxOn.hs
chapter20/: README.md  foldable.hs
chapter21/: README.md  traversable.hs
chapter22/: a_new_beginning.hs  chapter_exercises.hs  exercises.hs  short_exercises.hs
chapter23/: my_state.hs  throw_down.hs
chapter24/: learn_parsers.hs
chapter25/: bifunctor.hs  implementing_bind.hs  twinplicative.hs
chapter3/: README.md  awesomeCurry.hs  print3.hs  print3broken.hs  print3flipped.hs  reverse.hs
chapter4/: README.md  absolute.hs  changeMood.hs  greetIfCool.hs  palindrome.hs  zipping.hs
chapter5/: README.md  aaa.hs  abb.hs  arith3broken.hs  reverse.hs
chapter6/: 612exercises.hs  README.md
chapter7/: 76exercises.hs  README.md
chapter8/: README.md  dividedBy.hs  mc91.hs  word_number.hs
(+4 files in other folders)
