name:                using-quick-check
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Matt
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     UsingQuickCheck
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             using_quick_check_test.hs
  hs-source-dirs:      tests
  build-depends:       base
                     , using-quick-check
                     , QuickCheck
                     , hspec
  default-language:    Haskell2010
